package liuwanb;

public class Being {
    String name;
    public void setName(String s){name = s;}
    public String getName(){return name;}
}
