package liuwanb;

public class Entity extends Being{
    int health;
    public void beUsed(Creature user){}
    public void beUsed(Creature user,Creature target){}
}
